<resources>
    <string name="app_name">Seefud</string>
    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_profile">Profile</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Capai kuliner Indonesia yang bersih dan terpercaya bersama kami. Daftarkan usaha kulinermu di Seefood dan dapatkan token terpercaya dari kami</string>
    <string name="title_welcome_page">Hai, sobat Seefood!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Login</string>
    <string name="name">Nama</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="err_column">Kolom tidak boleh kosong</string>
    <string name="err_email">Email tidak valid</string>
    <string name="err_pass">Password tidak boleh kurang dari 8 karakter</string>
    <string name="retry">Coba Lagi</string>
    <string name="success_register_msg">Akun berhasil dibuat. Yuk, ke login. Tunggu.. </string>
    <string name="button_error">Lengkapi data terlebih dahulu</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="nama_resto_title">Nama Resto</string>
    <string name="lapor_btn_txt">Lapor lah</string>
    <string name="verificated_txt1">Selamat Makan! \nSudah kami jamin kebersihan tempat dan bahannya</string>
    <string name="verificated_txt2">Mau tahu makanan apa saja yang disajikan? \nScroll terus yuk!</string>
    <string name="tentang_toko_title">Tentang Toko</string>
    <string name="deskripsi_txt">deskripsiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii</string>
    <string name="lapor_txt">Bantu SeeFood lebih baik\nAda yang engga pas?</string>
    <string name="nama_makanan_txt">Food Name</string>
    <string name="profile_menuTitle_myAccount">My Account</string>
    <string name="profile_menuDesc_myAccount">Ubah detail profil</string>
    <string name="profile_menuTitle_logout">Log out</string>
    <string name="profile_menuTitle_deleteAccount">Delete Account</string>
    <string name="profile_menuDesc_deleteAccount">Goodbye? :(</string>
    <string name="search_txt">Search</string>
    <string name="halalSection_title">Bersertifikat Halal MUI</string>
    <string name="mitraSection_title">Mitra Amati</string>
    <string name="contentDesc_notif">Go to Notification Page</string>
    <string name="contentDesc_profile">Go to Profile Page</string>
    <string name="profile_menuTitle_login">Log In</string>
    <string name="title_welcome">Welcome</string>
    <string name="you_haven_t_logged_in_yet">Kamu mitra?\nAyo masuk dengan akun Seefud!</string>
    <string name="visitor_number">100</string>
    <string name="title_verified_profile">Verified</string>
    <string name="dashboard_title">Total Scan Pelanggan</string>
    <string name="profile_menutitle_addacc">Add Data</string>
    <string name="profile_menuDesc_addacc">Tambahkan daftar makanan dan minuman</string>
    <string name="profile_title_page">Profile</string>
    <string name="edit_profile_txt">Ada yang kurang tepat?</string>
    <string name="email_hint">yourvendorname123@example.com</string>
    <string name="save_profile">Simpan Perubahan</string>
    <string name="save_profile_txt">Sudah selesai mengubah?</string>
    <string name="edit_profile">Ubah Profil</string>
    <string name="no_data_msg">Belum ada UMKM yang terdaftar :(</string>
    <string name="nama_masakan">Nama Masakan</string>
    <string name="gambar_masakan">Gambar Masakan</string>
    <string name="upload_gambar_btn">Upload Gambar</string>
    <string name="bahan">Bahan</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="simpan_masakan_btn">Simpan</string>
    <string name="login_as_guest">Masuk sebagai Tamu</string>
    <string name="permission_granted">Izin diberikan</string>
    <string name="permission_denied">Izin ditolak</string>
    <string name="tambah_hidangan">Tambah Hidangan</string>
    <string name="hint_nama_masakan">Masukkan nama masakan</string>
    <string name="hint_bahan_masakan">Masukkan bahan masakan</string>
    <string name="hint_deskripsi_masakan">Masukkan deskripsi masakan</string>
    <string name="deskripsi_toko">Deskripsi Toko</string>
    <string name="logo_desc">logo desc</string>
    <string name="scan_qr_code">QR Code</string>
</resources>