<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.seefud.seefud.view.content.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.seefud.seefud.view.content.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.seefud.seefud.view.content.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_profile_to_myAccountFragment"
            app:destination="@id/myAccountFragment" />
        <action
            android:id="@+id/action_navigation_profile_to_qrDetailFragment"
            app:destination="@id/qrDetailFragment" />
        <action
            android:id="@+id/action_navigation_profile_to_addDishFragment"
            app:destination="@id/addDishFragment" />
    </fragment>
    <fragment
        android:id="@+id/myAccountFragment"
        android:name="com.seefud.seefud.view.content.profile.MyAccountFragment"
        android:label="MyAccountFragment" />
    <fragment
        android:id="@+id/qrDetailFragment"
        android:name="com.seefud.seefud.view.content.profile.QrDetailFragment"
        android:label="fragment_qr_detail"
        tools:layout="@layout/fragment_qr_detail" />
    <fragment
        android:id="@+id/addDishFragment"
        android:name="com.seefud.seefud.view.content.profile.AddDishFragment"
        android:label="fragment_add_dish"
        tools:layout="@layout/fragment_add_dish" />

</navigation>